@@ -150,7 +150,7 @@ public class VMRPDetailed extends MRPDetailed implements FormPanel,
 						else if (c == BigDecimal.class)
 							data = rs.getBigDecimal(colIndex);
 						else if (c == Double.class)
-							data = new Double(rs.getDouble(colIndex));
+							data = Double.valueOf(rs.getDouble(colIndex));
 						else if (c == Integer.class)
 							data = Integer.valueOf(rs.getInt(colIndex));
 						else if (c == KeyNamePair.class) {
